# hmpt

./: .flake8  README.md  noxfile.py  pyproject.toml  requirements.txt
src/hmpt/: console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
