[tool.poetry]
name = "hmpt"
version = "0.1.0"
description = ""
authors = ["Stanisław Ulam <l.ambroziak@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stasulam/hmpt"
repository = "https://github.com/stasulam/hmpt"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0"
requests = "^2.31.0"

[tool.poetry.scripts]
hmpt = "hmpt.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
