[tool.poetry]
name = "hmpt"
version = "0.1.0"
description = ""
authors = ["Stanisław Ulam <l.ambroziak@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stasulam/hmpt"
repository = "https://github.com/stasulam/hmpt"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.0"
requests = "^2.31.0"

[tool.poetry.scripts]
hmpt = "hmpt.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hmpt"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
